Fix navigation with slightly smaller link text, fixed width search, better responsive and still visible down to large

--- a/barebones/_barebones-structure.scss
+++ b/barebones/_barebones-structure.scss
@@ -74,3 +74,7 @@ ul.links {
   margin-top: 0rem;
   margin-bottom: .25rem;
 }
+
+.minw-12 {
+  min-width: 12rem;
+}
