--- a/barebones/barebones.css
+++ b/barebones/barebones.css
@@ -75,6 +75,8 @@ h1, h2, h3, h4, h5, h6 {
   .barebones .form-control-help {
     margin-top: 0rem;
     margin-bottom: .25rem; }
+  .barebones .minw-12 {
+    min-width: 12rem; }
   .barebones h1[class*="icon-"] {
     padding-right: 5rem;
     position: relative; }
